# skillscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skillscope.py
.github/workflows/: ci.yml
tests/: test_skillscope.py
