[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillscope"
version = "0.2.1"
description = "Audit your Claude Code skills — triggers, collisions, and context budget — as a self-contained HTML report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Troels Enigk" }]
keywords = ["claude-code", "claude", "anthropic", "agent-skills", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Troels-en/skillscope"
Issues = "https://github.com/Troels-en/skillscope/issues"

[project.scripts]
skillscope = "skillscope:main"

[tool.setuptools]
py-modules = ["skillscope"]
